# github-ci-test

./: CMakeLists.txt
.github/workflows/: build.yml
